# f1-live-data

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  requirements.txt  setup.cfg
src/dataimporter/: dashboard-save.json  dashboard.json  dashboard_utils.py  importer.py  message_handler.py  old-dashboard.json
storage/grafana/dashboards/: dashboard.json
storage/grafana/provisioning/dashboards/: default.yaml
storage/grafana/provisioning/datasources/: datasource.yaml
test/dataimportertest/: test_handle_message.py
