[metadata]
name = dataimporter
version = 1.0.0
author = f1guy
description = Python package to import f1 live data to influxdb
keywords = python, import influxdb

[options]
packages = find:
package_dir =
    = src
python_requires= >3.7, <3.14
install_requires =
    fastf1~=3.5.3
    influxdb-client~=1.48.0
    typer~=0.15.2

[options.packages.find]
where = src
include = *
exclude =

[options.entry_points]
console_scripts =
    dataimporter = dataimporter.importer:main
